objects/Pause_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pause History</relationshipLabel>
        <relationshipName>Pause_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Performed__c</fullName>
        <label>Action Performed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Set Pause</fullName>
                </value>
                <value>
                    <fullName>Edit Pause</fullName>
                </value>
                <value>
                    <fullName>Edit resume dates in pause</fullName>
                </value>
                <value>
                    <fullName>Cancel scheduled pause</fullName>
                </value>
                <value>
                    <fullName>Early resume</fullName>
                </value>
                <value>
                    <fullName>Cancel subscription</fullName>
                </value>
                <value>
                    <fullName>Cancel subscription in pause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pause_From__c</fullName>
        <label>Pause From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pause_Until__c</fullName>
        <label>Pause Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Cancellation_Date__c</fullName>
        <label>Subscription Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workflow_Id__c</fullName>
        <label>Workflow Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pause History</label>
    <nameField>
        <label>Pause History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pause History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>